--- a/formproject/src/App.css
+++ b/formproject/src/App.css
@@ -1,23 +1,44 @@
 .App {
-  text-align: center;
   display: flex;
-  justify-items: center;
+  text-align: center;
+  justify-content: center;
   align-items: center;
   height: 100vh;
 }
 form{
   width: 500px;
 }
+form label{
+  font-size: 16px;
+  font-weight: bold;
+}
 input{
     width: 100%;
     padding: 8px;
     font-size: 16px;
-    border: 2px solid #4a5568;
-    background-color: #2d3748;
+    border: 2px solid#E48B5E;
+    background-color : #3757AD;
     color: white;
     margin: 5px 0px;
     outline: none;
+    border-radius: 10px;
 }
 input::placeholder{
   color: lightgrey;
+}
+input:focus{
+  border-color: lightblue;
+}
+button{
+  width: 100%;
+  padding: 8px 8px;
+  margin: 16px 0;
+  border-radius: 8px;
+  background-color:#5EC5E0 ;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+}
+.inputDiv{
+  margin-top: 10px;
 }
