--- a/formproject/src/index.css
+++ b/formproject/src/index.css
@@ -1,5 +1,10 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
-  background: #1a202c;
+  background:#47567E;
   color: #f3f3f3 ;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
