--- a/formproject/src/App.css
+++ b/formproject/src/App.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  color: #0D0D0D;
 }
 form{
   width: 500px;
@@ -16,29 +17,37 @@ input{
     width: 100%;
     padding: 8px;
     font-size: 16px;
-    border: 2px solid#E48B5E;
-    background-color : #3757AD;
-    color: white;
+    border: 2px soli#A68F7B;
+    background-color : #9BB5BF;
+    color: black;
     margin: 5px 0px;
     outline: none;
     border-radius: 10px;
 }
 input::placeholder{
-  color: lightgrey;
+  color:#A68F7B;
 }
 input:focus{
-  border-color: lightblue;
+  border-color:#D9C2AD;
 }
 button{
   width: 100%;
   padding: 8px 8px;
   margin: 16px 0;
   border-radius: 8px;
-  background-color:#5EC5E0 ;
+  background-color :#0D0D0D;
   font-weight: bold;
   cursor: pointer;
   border: none;
+  color: white;
 }
 .inputDiv{
   margin-top: 10px;
+}
+.input-error{
+  border-color: #D9C2AD;
+}
+.error{color: #D9C2AD;
+  font-size: 12px;
+  text-align: left;
 }
