--- a/formproject/src/index.css
+++ b/formproject/src/index.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 body {
-  background:#47567E;
+  background:#4A7A8C;
   color: #f3f3f3 ;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
